# rox-control

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENCE  README.md  pyproject.toml  tasks.py
.devcontainer/: Dockerfile  devcontainer.json  init_container.sh
ci/: Dockerfile
ci/scripts/: run-ci.sh
examples/: 01_basic_simulation.py  02_pure_pursuit_a.py
src/rox_control/: __init__.py  __main__.py  cli.py  track.py  tracks.py  version.py
src/rox_control/controllers/: __init__.py  pure_pursuit_a.py
src/rox_control/tools/: __init__.py  plot.py  simulation.py
src/tools/: animation.py  bicicle_model.py  bycicle_model.py  bycicle_sim.py  plot.py  simulation.py  tracks.py
tests/: test_bicycle_sim.py  test_controllers.py  test_main.py  test_smoke.py  test_track_generators.py  test_tracks.py
