#-----------------pyproject.toml configuration----------------
[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "rox-control"
dynamic = ["version"]
dependencies = [
    "rox-vectors",
    "numpy",
]
description = "Controllers for path following"
authors = [
    {name = "ROX Automation", email = "jev.kuznetsov@gmail.com"},
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

requires-python = ">=3.11"


[project.optional-dependencies]
tools = [
    "matplotlib",
]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "invoke",
    "pre-commit",
    "matplotlib",
]




[project.urls]
Homepage = "https://github.com/rox-automation/rox-control"

# [project.scripts]
# rox_control = "rox_control.cli:cli"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.0.0+unknown"

#--------------mypy configuration----------------
[tool.mypy]
# Global options can be specified here
disallow_untyped_defs = true
ignore_missing_imports = true



#-----------------pytest configuration----------------
[tool.pytest.ini_options]

log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%H:%M:%S"

#-----------------coverage configuration----------------
[tool.coverage.run]
omit = [
    "tests/*",
    "src/rox_control/tools/plot.py"
]

#------------------ruff configuration----------------
[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["B", "I", "C4", "TID", "SIM", "PLE", "RUF"]
ignore = [
    "D100", "D101", "D102", "D103",  # Missing docstrings
    "N806", "N803",  # Invalid name patterns
    "G201",  # Logging f-string interpolation
    "ARG001",  # Unused function argument
    "BLE001",  # Blind except
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]  # Allow unused arguments in tests
